--- a/results/AE_Severe_Events_notebook.ipynb
+++ b/results/AE_Severe_Events_notebook.ipynb
@@ -102,6 +102,7 @@
    "source": [
     "from data_helpers import load_static_feat\n",
     "from result_helper import *"
+    "from stats import *"
    ]
   },
   {
