--- a/results/AE_Severe_Events_notebook.ipynb
+++ b/results/AE_Severe_Events_notebook.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "from data_helpers import load_static_feat\n",
-    "from result_helper import *"
+    "from result_helper import *\n",
     "from stats import *"
    ]
   },
